syntax = "proto3";

package protos.grpc;

import "google/protobuf/empty.proto";
import "src/protos/metadata.proto";


message OpenFileRequest {
  // Absolute file name or directory name
  string filename = 1;
  // A chunk index is |byte_range / chunk block size|.
  // By default, the block size of a chunk is 64MB.
  // This is not required, and ignored, for |APPEND| mode.
  uint32 chunk_index = 2;
  // Open modes
  enum OpenMode {
    UNKNOWN = 0;
    READ = 1;
    WRITE = 2;
    CREATE = 3;
    APPEND = 4;
  }
  OpenMode mode = 3;
  // Create the file chunk, if it doesn't exist. This is only valid for WRITE 
  // mode
  bool create_if_not_exists = 4;
}

message OpenFileReply {
  // The original request associated with this reply.
  OpenFileRequest request = 1;
  // The metadata for the requested file chunk.
  protos.FileChunkMetadata metadata = 2;
}

message DeleteFileRequest {
  // Absolute file name or directory name
  string filename = 1;
}
